ft260/LibFT260.h


typedef HANDLE FT260_HANDLE;


typedef unsigned char   uint8;


typedef unsigned char   u8;

typedef unsigned long   u32;
typedef unsigned char   BOOL;
typedef unsigned int uint32;
typedef unsigned long uint32;

/* I2C Master Controller Status
 *   bit 0 = controller busy: all other status bits invalid
 *   bit 1 = error condition
 *   bit 2 = slave address was not acknowledged during last operation
 *   bit 3 = data not acknowledged during last operation
 *   bit 4 = arbitration lost during last operation
 *   bit 5 = controller idle
 *   bit 6 = bus busy
 */
#define I2CM_CONTROLLER_BUSY(status) (((status) & 0x01) != 0)
#define I2CM_DATA_NACK(status)       (((status) & 0x0A) != 0)
#define I2CM_ADDRESS_NACK(status)    (((status) & 0x06) != 0)
#define I2CM_ARB_LOST(status)        (((status) & 0x12) != 0)
#define I2CM_IDLE(status)            (((status) & 0x20) != 0)
#define I2CM_BUS_BUSY(status)        (((status) & 0x40) != 0)

enum FT260_STATUS
{
    FT260_OK,
    FT260_INVALID_HANDLE,
    FT260_DEVICE_NOT_FOUND,
    FT260_DEVICE_NOT_OPENED,
    FT260_DEVICE_OPEN_FAIL,
    FT260_DEVICE_CLOSE_FAIL,
    FT260_INCORRECT_INTERFACE,
    FT260_INCORRECT_CHIP_MODE,
    FT260_DEVICE_MANAGER_ERROR,
    FT260_IO_ERROR,
    FT260_INVALID_PARAMETER,
    FT260_NULL_BUFFER_POINTER,
    FT260_BUFFER_SIZE_ERROR,
    FT260_UART_SET_FAIL,
    FT260_RX_NO_DATA,
    FT260_GPIO_WRONG_DIRECTION,
    FT260_INVALID_DEVICE,
    FT260_INVALID_OPEN_DRAIN_SET,
    FT260_INVALID_OPEN_DRAIN_RESET,
	FT260_I2C_READ_FAIL,
    FT260_OTHER_ERROR
};


enum FT260_UART_Mode
{
    FT260_UART_OFF = 0,
    FT260_UART_RTS_CTS_MODE,        // hardware flow control RTS, CTS mode
    FT260_UART_DTR_DSR_MODE,        // hardware flow control DTR, DSR mode
    FT260_UART_XON_XOFF_MODE,       // software flow control mode
    FT260_UART_NO_FLOW_CTRL_MODE    // no flow control mode
};


enum FT260_Data_Bit
{
    FT260_DATA_BIT_7 = 7,
    FT260_DATA_BIT_8 = 8
};


enum FT260_Stop_Bit
{
    FT260_STOP_BITS_1 = 0,
    FT260_STOP_BITS_2 = 2
};


enum FT260_Parity
{
    FT260_PARITY_NONE = 0,
    FT260_PARITY_ODD,
    FT260_PARITY_EVEN,
    FT260_PARITY_MARK,
    FT260_PARITY_SPACE
};


enum FT260_RI_Wakeup_Type
{
    FT260_RI_WAKEUP_RISING_EDGE = 0,
    FT260_RI_WAKEUP_FALLING_EDGE,
};


struct FT260_GPIO_Report
{
    WORD value;       // GPIO0~5 values
    WORD dir;         // GPIO0~5 directions
    WORD gpioN_value; // GPIOA~H values
    WORD gpioN_dir;   // GPIOA~H directions
};


enum FT260_I2C_FLAG
{
    FT260_I2C_NONE  = 0,
    FT260_I2C_START = 0x02,
    FT260_I2C_REPEATED_START = 0x03,
    FT260_I2C_STOP  = 0x04,
    FT260_I2C_START_AND_STOP = 0x06
};
typedef struct
{
    u8 flow_ctrl;
    u32 baud_rate;
    u8 data_bit;
    u8 parity;
    u8 stop_bit;
    u8 breaking;
} UartConfig;


// FT260 I2C Functions
LIBFT260_API FT260_STATUS WINAPI FT260_I2CMaster_Init(FT260_HANDLE ft260Handle, uint32 kbps);

LIBFT260_API FT260_STATUS WINAPI FT260_I2CMaster_Read(FT260_HANDLE handle, uint8 deviceAddress, FT260_I2C_FLAG flag, LPVOID lpBuffer, DWORD dwBytesToRead, LPDWORD lpdwBytesReturned, DWORD wait_timer = 5000);

LIBFT260_API FT260_STATUS WINAPI FT260_I2CMaster_Write(FT260_HANDLE ft260Handle, uint8 deviceAddress, FT260_I2C_FLAG flag, LPVOID lpBuffer, DWORD dwBytesToWrite, LPDWORD lpdwBytesWritten);

LIBFT260_API FT260_STATUS WINAPI FT260_I2CMaster_GetStatus(FT260_HANDLE ft260Handle, uint8* status);

LIBFT260_API FT260_STATUS WINAPI FT260_I2CMaster_Reset(FT260_HANDLE ft260Handle);



// FT260 UART Functions
LIBFT260_API FT260_STATUS WINAPI FT260_UART_Init(FT260_HANDLE ft260Handle);

LIBFT260_API FT260_STATUS WINAPI FT260_UART_SetBaudRate(FT260_HANDLE ft260Handle, ULONG baudRate);

LIBFT260_API FT260_STATUS WINAPI FT260_UART_SetFlowControl(FT260_HANDLE ft260Handle, FT260_UART_Mode flowControl);

LIBFT260_API FT260_STATUS WINAPI FT260_UART_SetDataCharacteristics(FT260_HANDLE ft260Handle, FT260_Data_Bit dataBits, FT260_Stop_Bit stopBits, FT260_Parity parity);

LIBFT260_API FT260_STATUS WINAPI FT260_UART_SetBreakOn(FT260_HANDLE ft260Handle);

LIBFT260_API FT260_STATUS WINAPI FT260_UART_SetBreakOff(FT260_HANDLE ft260Handle);

LIBFT260_API FT260_STATUS WINAPI FT260_UART_SetXonXoffChar(FT260_HANDLE ft260Handle, UCHAR Xon, UCHAR Xoff);

LIBFT260_API FT260_STATUS WINAPI FT260_UART_GetConfig(FT260_HANDLE ft260Handle, UartConfig* pUartConfig);

LIBFT260_API FT260_STATUS WINAPI FT260_UART_GetQueueStatus(FT260_HANDLE ft260Handle, LPDWORD lpdwAmountInRxQueue);

LIBFT260_API FT260_STATUS WINAPI FT260_UART_Read(FT260_HANDLE ft260Handle, LPVOID lpBuffer, DWORD dwBufferLength, DWORD dwBytesToRead, LPDWORD lpdwBytesReturned);

LIBFT260_API FT260_STATUS WINAPI FT260_UART_Write(FT260_HANDLE ft260Handle, LPVOID lpBuffer, DWORD dwBufferLength, DWORD dwBytesToWrite, LPDWORD lpdwBytesWritten);

LIBFT260_API FT260_STATUS WINAPI FT260_UART_Reset(FT260_HANDLE ft260Handle);


LIBFT260_API FT260_STATUS WINAPI FT260_UART_GetDcdRiStatus(FT260_HANDLE ft260Handle, uint8* value);

LIBFT260_API FT260_STATUS WINAPI FT260_UART_EnableRiWakeup(FT260_HANDLE ft260Handle, BOOL enable);

LIBFT260_API FT260_STATUS WINAPI FT260_UART_SetRiWakeupConfig(FT260_HANDLE ft260Handle, FT260_RI_Wakeup_Type type);


// Interrupt is transmitted by UART interface
LIBFT260_API FT260_STATUS WINAPI FT260_GetInterruptFlag(FT260_HANDLE ft260Handle, BOOL* pbFlag);

LIBFT260_API FT260_STATUS WINAPI FT260_CleanInterruptFlag(FT260_HANDLE ft260Handle, BOOL* pbFlag);



// FT260 GPIO Functions
LIBFT260_API FT260_STATUS WINAPI FT260_GPIO_Set(FT260_HANDLE ft260Handle, FT260_GPIO_Report report);

LIBFT260_API FT260_STATUS WINAPI FT260_GPIO_Get(FT260_HANDLE ft260Handle, FT260_GPIO_Report* report);

LIBFT260_API FT260_STATUS WINAPI FT260_GPIO_SetDir(FT260_HANDLE ft260Handle, WORD pinNum, BYTE dir);

LIBFT260_API FT260_STATUS WINAPI FT260_GPIO_Read(FT260_HANDLE ft260Handle, WORD pinNum, BYTE* pValue);

LIBFT260_API FT260_STATUS WINAPI FT260_GPIO_Write(FT260_HANDLE ft260Handle, WORD pinNum, BYTE value);