ft260/uLibFT260.pas


function FT260_I2CMaster_Init(ft260Handle: FT260_HANDLE; kbps: DWord): FT260_STATUS; stdcall; external LIB_FT_260 name '_FT260_I2CMaster_Init@8';
function FT260_I2CMaster_Read(ft260Handle: FT260_HANDLE; deviceAddress: Byte; flag: FT260_I2C_FLAG; lpBuffer: Pointer; dwBytesToRead: DWord; lpdwBytesReturned: PDWord;wait_timer:DWORD): FT260_STATUS; stdcall; external LIB_FT_260 name '_FT260_I2CMaster_Read@28'; overload;
function FT260_I2CMaster_Read(ft260Handle: FT260_HANDLE; deviceAddress: Byte; flag: FT260_I2C_FLAG; lpBuffer: Pointer; dwBytesToRead: DWord; var lpdwBytesReturned: DWord;wait_timer:DWORD): FT260_STATUS; stdcall; external LIB_FT_260 name '_FT260_I2CMaster_Read@28'; overload;
function FT260_I2CMaster_Write(ft260Handle: FT260_HANDLE; deviceAddress: Byte; flag: FT260_I2C_FLAG; lpBuffer: Pointer; dwBytesToWrite: DWord; lpdwBytesWritten: PDWord): FT260_STATUS; stdcall; external LIB_FT_260 name '_FT260_I2CMaster_Write@24'; overload;
function FT260_I2CMaster_Write(ft260Handle: FT260_HANDLE; deviceAddress: Byte; flag: FT260_I2C_FLAG; lpBuffer: Pointer; dwBytesToWrite: DWord; var lpdwBytesWritten: DWord): FT260_STATUS; stdcall; external LIB_FT_260 name '_FT260_I2CMaster_Write@24'; overload;
function FT260_I2CMaster_GetStatus(ft260Handle: FT260_HANDLE; status: PByte): FT260_STATUS; stdcall; external LIB_FT_260 name '_FT260_I2CMaster_GetStatus@8'; overload;
function FT260_I2CMaster_GetStatus(ft260Handle: FT260_HANDLE; var status: Byte): FT260_STATUS; stdcall; external LIB_FT_260 name '_FT260_I2CMaster_GetStatus@8'; overload;
function FT260_I2CMaster_Reset(ft260Handle: FT260_HANDLE): FT260_STATUS; stdcall; external LIB_FT_260 name '_FT260_I2CMaster_Reset@4';

// FT260 UART Functions

function FT260_UART_Init(ft260Handle: FT260_HANDLE): FT260_STATUS; stdcall; external LIB_FT_260 name '_FT260_UART_Init@4';
function FT260_UART_SetBaudRate(ft260Handle: FT260_HANDLE; baudRate: DWord): FT260_STATUS; stdcall; external LIB_FT_260 name '_FT260_UART_SetBaudRate@8';
function FT260_UART_SetFlowControl(ft260Handle: FT260_HANDLE; flowControl: FT260_UART_Mode): FT260_STATUS; stdcall; external LIB_FT_260 name '_FT260_UART_SetFlowControl@8';
function FT260_UART_SetDataCharacteristics(ft260Handle: FT260_HANDLE; dataBits: FT260_Data_Bit; stopBits: FT260_Stop_Bit; parity: FT260_Parity): FT260_STATUS; stdcall; external LIB_FT_260 name '_FT260_UART_SetDataCharacteristics@16';
function FT260_UART_SetBreakOn(ft260Handle: FT260_HANDLE): FT260_STATUS; stdcall; external LIB_FT_260 name '_FT260_UART_SetBreakOn@4';
function FT260_UART_SetBreakOff(ft260Handle: FT260_HANDLE): FT260_STATUS; stdcall; external LIB_FT_260 name '_FT260_UART_SetBreakOff@4';
function FT260_UART_SetXonXoffChar(ft260Handle: FT260_HANDLE; Xon: Byte; Xoff: Byte): FT260_STATUS; stdcall; external LIB_FT_260 name '_FT260_UART_SetXonXoffChar@12';
function FT260_UART_GetConfig(ft260Handle: FT260_HANDLE; pUartConfig: PUartConfig): FT260_STATUS; stdcall; external LIB_FT_260 name '_FT260_UART_GetConfig@8'; overload;
function FT260_UART_GetConfig(ft260Handle: FT260_HANDLE; var pUartConfig: UartConfig): FT260_STATUS; stdcall; external LIB_FT_260 name '_FT260_UART_GetConfig@8'; overload;
function FT260_UART_GetQueueStatus(ft260Handle: FT260_HANDLE; lpdwAmountInRxQueue: PDWord): FT260_STATUS; stdcall; external LIB_FT_260 name '_FT260_UART_GetQueueStatus@8'; overload;
function FT260_UART_GetQueueStatus(ft260Handle: FT260_HANDLE; var lpdwAmountInRxQueue: DWord): FT260_STATUS; stdcall; external LIB_FT_260 name '_FT260_UART_GetQueueStatus@8'; overload;
function FT260_UART_Read(ft260Handle: FT260_HANDLE; lpBuffer: Pointer; dwBufferLength, dwBytesToRead: DWord; lpdwBytesReturned: PDWord): FT260_STATUS; stdcall; external LIB_FT_260 name '_FT260_UART_Read@20'; overload;
function FT260_UART_Read(ft260Handle: FT260_HANDLE; lpBuffer: Pointer; dwBufferLength, dwBytesToRead: DWord; var lpdwBytesReturned: DWord): FT260_STATUS; stdcall; external LIB_FT_260 name '_FT260_UART_Read@20'; overload;
function FT260_UART_Write(ft260Handle: FT260_HANDLE; lpBuffer: Pointer; dwBufferLength, dwBytesToWrite: DWord; lpdwBytesWritten: PDWord): FT260_STATUS; stdcall; external LIB_FT_260 name '_FT260_UART_Write@20'; overload;
function FT260_UART_Write(ft260Handle: FT260_HANDLE; lpBuffer: Pointer; dwBufferLength, dwBytesToWrite: DWord; var lpdwBytesWritten: DWord): FT260_STATUS; stdcall; external LIB_FT_260 name '_FT260_UART_Write@20'; overload;
function FT260_UART_Reset(ft260Handle: FT260_HANDLE): FT260_STATUS; stdcall; external LIB_FT_260 name '_FT260_UART_Reset@4';
function FT260_UART_GetDcdRiStatus(ft260Handle: FT260_HANDLE; value: PByte): FT260_STATUS; stdcall; external LIB_FT_260 name '_FT260_UART_GetDcdRiStatus@8'; overload;
function FT260_UART_GetDcdRiStatus(ft260Handle: FT260_HANDLE; var value: Byte): FT260_STATUS; stdcall; external LIB_FT_260 name '_FT260_UART_GetDcdRiStatus@8'; overload;
function FT260_UART_EnableRiWakeup(ft260Handle: FT260_HANDLE; enable: Boolean): FT260_STATUS; stdcall; external LIB_FT_260 name '_FT260_UART_EnableRiWakeup@8';
function FT260_UART_SetRiWakeupConfig(ft260Handle: FT260_HANDLE; typ: FT260_RI_Wakeup_Type): FT260_STATUS; stdcall; external LIB_FT_260 name '_FT260_UART_SetRiWakeupConfig@8';

// Interrupt is transmitted by UART interface

function FT260_GetInterruptFlag(ft260Handle: FT260_HANDLE; pbFlag: PBoolean): FT260_STATUS; stdcall; external LIB_FT_260 name '_FT260_GetInterruptFlag@8'; overload;
function FT260_GetInterruptFlag(ft260Handle: FT260_HANDLE; var pbFlag: Boolean): FT260_STATUS; stdcall; external LIB_FT_260 name '_FT260_GetInterruptFlag@8'; overload;
function FT260_CleanInterruptFlag(ft260Handle: FT260_HANDLE; pbFlag: PBoolean): FT260_STATUS; stdcall; external LIB_FT_260 name '_FT260_CleanInterruptFlag@8'; overload;
function FT260_CleanInterruptFlag(ft260Handle: FT260_HANDLE; var pbFlag: Boolean): FT260_STATUS; stdcall; external LIB_FT_260 name '_FT260_CleanInterruptFlag@8'; overload;

// FT260 GPIO Functions

function FT260_GPIO_Set(ft260Handle: FT260_HANDLE; report: FT260_GPIO_Report): FT260_STATUS; stdcall; external LIB_FT_260 name '_FT260_GPIO_Set@12';
function FT260_GPIO_Get(ft260Handle: FT260_HANDLE; report: PFT260_GPIO_Report): FT260_STATUS; stdcall; external LIB_FT_260 name '_FT260_GPIO_Get@8'; overload;
function FT260_GPIO_Get(ft260Handle: FT260_HANDLE; var report: FT260_GPIO_Report): FT260_STATUS; stdcall; external LIB_FT_260 name '_FT260_GPIO_Get@8'; overload;
function FT260_GPIO_SetDir(ft260Handle: FT260_HANDLE; pinNum: Word; dir: Byte): FT260_STATUS; stdcall; external LIB_FT_260 name '_FT260_GPIO_SetDir@12';
function FT260_GPIO_Read(ft260Handle: FT260_HANDLE; pinNum: Word; pValue: PByte): FT260_STATUS; stdcall; external LIB_FT_260 name '_FT260_GPIO_Read@12'; overload;
function FT260_GPIO_Read(ft260Handle: FT260_HANDLE; pinNum: Word; var pValue: Byte): FT260_STATUS; stdcall; external LIB_FT_260 name '_FT260_GPIO_Read@12'; overload;
function FT260_GPIO_Write(ft260Handle: FT260_HANDLE; pinNum: Word; value: Byte): FT260_STATUS; stdcall; external LIB_FT_260 name '_FT260_GPIO_Write@12';


{ Macro }

function I2CM_CONTROLLER_BUSY(status: Byte): Boolean;
function I2CM_DATA_NACK(status: Byte): Boolean;
function I2CM_ADDRESS_NACK(status: Byte): Boolean;
function I2CM_ARB_LOST(status: Byte): Boolean;
function I2CM_IDLE(status: Byte): Boolean;
function I2CM_BUS_BUSY(status: Byte): Boolean;

implementation

{ Macro }

(* I2C Master Controller Status
 *   bit 0 = controller busy: all other status bits invalid
 *   bit 1 = error condition
 *   bit 2 = slave address was not acknowledged during last operation
 *   bit 3 = data not acknowledged during last operation
 *   bit 4 = arbitration lost during last operation
 *   bit 5 = controller idle
 *   bit 6 = bus busy
 *)

// #define I2CM_CONTROLLER_BUSY(status) (((status) & 0x01) != 0)
function I2CM_CONTROLLER_BUSY(status: Byte): Boolean;
begin
  result := (Status and 1) <> 0;
end;

// #define I2CM_DATA_NACK(status)       (((status) & 0x0A) != 0)
function I2CM_DATA_NACK(status: Byte): Boolean;
begin
  result := (Status and $A) <> 0;
end;

// #define I2CM_ADDRESS_NACK(status)    (((status) & 0x06) != 0)
function I2CM_ADDRESS_NACK(status: Byte): Boolean;
begin
  result := (Status and 6) <> 0;
end;

// #define I2CM_ARB_LOST(status)        (((status) & 0x12) != 0)
function I2CM_ARB_LOST(status: Byte): Boolean;
begin
  result := (Status and $12) <> 0;
end;

// #define I2CM_IDLE(status)            (((status) & 0x20) != 0)
function I2CM_IDLE(status: Byte): Boolean;
begin
  result := (Status and $20) <> 0;
end;

// #define I2CM_BUS_BUSY(status)        (((status) & 0x40) != 0)
function I2CM_BUS_BUSY(status: Byte): Boolean;
begin
  result := (Status and $40) <> 0;
end;

end.
